Fix build failed for riscv64 https://bugs.webkit.org/show_bug.cgi?id=266218

Reviewed by Yusuke Suzuki.

fix the build error

* RISCV64.patch: Added.
* Source/JavaScriptCore/assembler/RISCV64Assembler.h:
* Source/JavaScriptCore/offlineasm/riscv64.rb:

Canonical link: https://commits.webkit.org/274066@main